--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,18 @@
   </head>
   <body>
 
+    <div class=js-my-module>
+      <button>Click me</button>
+      <p class=js-content>Hello</p>
+      <ul>
+        <li class=item>1</li>
+        <li class=item>2</li>
+        <li class=item>3</li>
+      </ul>
+      <div class=wrap>
+        <span class=item>foo</span>
+      </div>
+    </div>
 
     <script src="../components/underscore/underscore.js"></script>
     <script src="../components/jquery/jquery.js"></script>
@@ -14,13 +26,22 @@
     <script src="../components/coffee-script/extras/coffee-script.js"></script>
 
     <script type="text/coffeescript">
-      console.log catbug.treeParser.parse """
-        .js-some-module
-          .js-ololo
-          .js-another(name="ooo" some something=lll)
-            & .js-lalal
-              & .js-ololo
-      """
+      catbug """
+        .js-my-module
+          button (name=clickable)
+          .js-content
+          ul
+            & .item
+          .wrap
+            & .item (name=wraped)
+      """, 'my-module', ->
+        @content.hide()
+        @clickable.click => @content.toggle()
+        @ulItem.click => @ul.hide()
+        @wraped.click => @ul.show()
+
+        sayHello: =>
+          @content.show()
     </script>
   </body>
 </html>
