--- a/demo/todo.html
+++ b/demo/todo.html
@@ -132,7 +132,7 @@
           .js-new-item
           .js-item-list
             .js-todo-item
-              & [type=checkbox] (name=itemCheckbox) // just example
+              & [type=checkbox] {name=itemCheckbox} // just example
               .js-item-text
               .js-item-remove
               .js-item-field
